jira task KNOWAGE-1283: - Solved IE 11 issue: removed unnecessary flex from DOM elements; - md-toolbar has been wrapped in order to be responsive inside the sidenav panel.

--- a/knowagegeoreportengine/WebContent/css/angularGeoReport.css
+++ b/knowagegeoreportengine/WebContent/css/angularGeoReport.css
@@ -99,7 +99,11 @@ geo-download {
 	height: 100%;
 }
 
-#geoRigthMenu .md-sidenav-right>md-toolbar {
+/*
+#geoRigthMenu .md-sidenav-right>md-toolbar,
+*/
+#geoRigthMenu .md-sidenav-right .md-sidenav-right-wrapper md-toolbar 
+{
 	min-height: 23px;
 	height: 26px;
 }
